<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory 
        android:title="General Settings">
 
        <EditTextPreference 
            android:title="@string/prefs_hostip"
            android:name="Server IP"
            android:summary="The IP address of the host PC (eg. 192.168.1.101)"
            android:defaultValue="192.168.1.101"
            android:key="hostname" />
    
    
     <EditTextPreference 
            android:title="@string/prefs_hostport"
            android:name="Server Port"
            android:summary="The port number of host PC (range: 0-65535)"
            android:defaultValue="27015"
            android:key="portnumber" />
            
      <EditTextPreference 
            android:title="@string/prefs_hostpin"
            android:name="Server Pin"
            android:summary="The pin number used on host PC (must match host) (range: 0-65535)"
            android:defaultValue="1337"
            android:key="pinnumber" />
            
     </PreferenceCategory>
</PreferenceScreen>